[project]
name = "markdown-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mr. NoPatience", email = "nopatience@x90.se" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
]

[project.scripts]
markdown-graph = "markdown_graph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "markdown-graph",
]

[tool.uv.sources]
markdown-graph = { workspace = true }
